# vulkan-renderer

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .readthedocs.yml  .travis.yml  BUILDING.md  CHANGELOG.rst  CMakeLists.txt  CODEDESIGN.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Doxyfile  LICENSE  LICENSE.md  PKGBUILD  README.md  README.rst  SECURITY.rst  compile_commands.json  conanfile.py  create_documentation.bat  dependencies.cmake  generate_documentation.bat
benchmarks/: CMakeLists.txt  engine_benchmark_main.cpp
benchmarks/world/: cube_collision.cpp
documentation/: CMakeLists.txt  INSTRUCTION.md  requirements.txt
documentation/cmake/: sphinx-config.cmake
documentation/helper/: generate_radar.py  generate_vk_inv.py
documentation/source/: conf.py  content.rst.inc  getting-started.rst  index.rst
documentation/source/changelog/: main.rst
documentation/source/code/: main.rst
documentation/source/contact/: main.rst
documentation/source/contributing/: code_of_conduct.rst  contribute-art.rst  contribute-code.rst  contributors.rst  licenses.rst  main.rst
documentation/source/development/: benchmarking.rst  building.rst  ci.rst  cla.rst  clang-format.rst  dependencies.rst  documentation.rst  getting-started.rst  labeling.rst  main.rst  main.rst~  platforms.rst  preparation.rst  regressions.rst  static-code-analysis.rst  test-automation.rst
documentation/source/engine-overview/: main.rst
documentation/source/faq/: main.rst
documentation/source/license/: main.rst
documentation/source/links/: main.rst
documentation/source/reference/: binary-format-specification.rst  command-buffers-and-command-pools.rst  main.rst
example/: CMakeLists.txt  main.cpp
example-app/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  octree_gpu_vertex.hpp  renderer.cpp  renderer.hpp  standard_ubo.hpp
example-app/include/: example_app.hpp  example_app_base.hpp  example_app_meta.hpp  example_app_meta.hpp.in  meta.hpp.in
example-app/src/: CMakeLists.txt  example_app.cpp  example_app_base.cpp  example_app_meta.cpp
shaders/: CMakeLists.txt  compile_shaders.bat  fragmentshader.frag  octree.frag  ui.frag  ui.vert  vertexshader.vert
shaders/brdflut/: genbrdflut.frag
shaders/gltf/: mesh.frag  mesh.vert  texture.frag
shaders/imgui/: compile_shaders.bat  ui.frag  ui.vert
shaders/octree/: octree.vert
shaders/physically-based-rendering/: compile_shaders.bat
shaders/skybox/: compile_shaders.bat  skybox.frag
shaders/textures/: vertexshader.glsl
src/: CMakeLists.txt  InexorApplication.cpp  InexorApplication.hpp  inexor_application.cpp  inexor_application.hpp  main.cpp
src/configuration/: renderer_configuration.toml
src/shaders/: run_compiler.bat  shader.vert
src/shaders/textures/: fragmentshader.frag  run_compiler.bat
src/shaders/triangle/: run_compiler.bat  shader.frag
src/shaders/ubo/: run_compiler.bat  vertexshader.vert
src/shaders/vertex-buffers/: fragmentshader.frag  vertexshader.vert
src/vma/: vk_mem_alloc.h
src/vulkan-renderer/: InexorApplication.cpp  InexorApplication.hpp  InexorRenderer.cpp  InexorRenderer.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  application.cpp  availability_checks.cpp  bezier_curve.cpp  camera.cpp  command_buffer.cpp  command_pool.cpp  debug_callback.cpp  debug_marker_manager.cpp  descriptor.cpp  descriptor_manager.cpp  descriptor_pool.cpp  error_handling.cpp  exception.cpp  fence_manager.cpp  fps_counter.cpp  frame_graph.cpp  gpu_data_base.cpp  gpu_info.cpp  gpu_memory_buffer.cpp  gpu_queue_manager.cpp  imgui.cpp  imgui_overlay.cpp  inexor_application.cpp  mesh_buffer.cpp  mesh_buffer_manager.cpp  octree_vertex.cpp  once_command_buffer.cpp  render_graph.cpp  renderer.cpp  renderer.hpp  semaphore_manager.cpp  settings_decision_maker.cpp  shader.cpp  shader_manager.cpp  (+10 more)
src/vulkan-renderer/audio/: setup.cpp
src/vulkan-renderer/availability-checks/: VulkanAvailabilityChecks.cpp  VulkanAvailabilityChecks.hpp  availability_checks.cpp  availability_checks.hpp  availability_checks_benchmarks.cpp  availability_checks_tests.cpp  vk_availability_checks.cpp  vk_availability_checks.hpp  vk_availability_checks_benchmarks.cpp  vk_availability_checks_tests.cpp
src/vulkan-renderer/bezier-curve/: bezier_curve.cpp  bezier_curve.h
src/vulkan-renderer/buffers/: InexorBuffer.hpp  gpu_buffer.hpp  vk_buffer.hpp
src/vulkan-renderer/camera/: InexorCamera.cpp  InexorCamera.hpp  camera.cpp  camera.hpp
src/vulkan-renderer/class-templates/: manager_template.hpp  manager_template_tests.cpp
src/vulkan-renderer/command-buffer-recording/: single_time_command_buffer.cpp  single_time_command_buffer.hpp  vk_single_time_command_buffer.cpp  vk_single_time_command_buffer.hpp
src/vulkan-renderer/cubemap/: cpu_cubemap.cpp  cubemap.cpp  cubemap_cpu_texture.cpp  cubemap_generator.cpp  gpu_cubemap.cpp  texture2d.cpp  texture_cubemap.cpp
src/vulkan-renderer/debug-callback/: VulkanDebugCallback.hpp  debug_callback.hpp  vk_debug_callback.hpp
src/vulkan-renderer/debug-marker/: VulkanDebugMarkerManager.cpp  VulkanDebugMarkerManager.hpp  debug_marker_manager.cpp  debug_marker_manager.hpp  vk_debug_marker_manager.cpp  vk_debug_marker_manager.hpp
src/vulkan-renderer/depth-buffer/: InexorDepthBuffer.hpp  depth_buffer.hpp  vk_depth_buffer.hpp
src/vulkan-renderer/descriptor-manager/: descriptor_manager.cpp  descriptor_manager.hpp
src/vulkan-renderer/descriptor-pool/: InexorDescriptorPool.hpp  descriptor_pool.hpp
src/vulkan-renderer/descriptor-set-manager/: descriptor_set_builder.cpp  descriptor_set_builder.hpp  descriptor_set_manager.cpp  descriptor_set_manager.hpp  inexor_descriptor_set.hpp  vk_descriptor_set_manager.cpp  vk_descriptor_set_manager.hpp
tests/: CMakeLists.txt  unit_tests_main.cpp
tests/allocators/: pool_allocator_tests.cpp
tests/gpu-selection/: physical-device-rating.cpp  selection.cpp
tests/queue-selection/: queue_selection.cpp
tests/swapchain/: choose_settings.cpp  choose_settings_tests.cpp
tests/world/: cube.cpp  cube_collision.cpp  cube_tests.cpp
(+1213 files in other folders)
